force-app/main/default/objects/VisitDialogSectionSettings__mdt/VisitDialogSectionSettings__mdt.object-meta.xml
<CustomObject>
    <label>Visit Dialog Section Settings</label>
    <pluralLabel>Visit Dialog Section Settings</pluralLabel>
</CustomObject>