force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/CreateAllowed__c.field-meta.xml
<CustomField>
    <fullName>CreateAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Allowed</label>
    <type>Checkbox</type>
</CustomField>