force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/DeleteAllowed__c.field-meta.xml
<CustomField>
    <fullName>DeleteAllowed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Allowed</label>
    <type>Checkbox</type>
</CustomField>