force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/FieldsLayout__c.field-meta.xml
<CustomField>
    <fullName>FieldsLayout__c</fullName>
    <label>Fields Layout</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>