force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/LookupAPINameToParentObject__c.field-meta.xml
<CustomField>
    <fullName>LookupAPINameToParentObject__c</fullName>
    <label>Lookup API Name To Parent Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>