force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/ReadOnlyAttribute__c.field-meta.xml
<CustomField>
    <fullName>ReadOnlyAttribute__c</fullName>
    <label>Read Only Attribute</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>