force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/RecordCondition__c.field-meta.xml
<CustomField>
    <fullName>RecordCondition__c</fullName>
    <label>Record Condition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>