force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/RelatedObjectRecordType__c.field-meta.xml
<CustomField>
    <fullName>RelatedObjectRecordType__c</fullName>
    <label>Related Object Record Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>