force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/RequiredAttribute__c.field-meta.xml
<CustomField>
    <fullName>RequiredAttribute__c</fullName>
    <label>Required Attribute</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>