force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/SectionOrder__c.field-meta.xml
<CustomField>
    <fullName>SectionOrder__c</fullName>
    <label>Section Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>