force-app/main/default/objects/VisitDialogSectionSettings__mdt/fields/VisitDialogTab__c.field-meta.xml
<CustomField>
    <fullName>VisitDialogTab__c</fullName>
    <label>Visit Dialog Tab</label>
    <referenceTo>VisitDialogTabSettings__mdt</referenceTo>
    <relationshipLabel>Visit Dialog Section</relationshipLabel>
    <relationshipName>VisitDialogSectionSettings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>